ui: diagnostics: Fix gap between headings
- Wrap each app's results in a <section>. Style section to maintain gap with
previous sections.

--- a/static/themes/default/css/main.css
+++ b/static/themes/default/css/main.css
@@ -73,6 +73,7 @@
 /*
  * Bootstrap override
  */
+section:not(:first-child),
 h1:not(:first-child),
 h2:not(:first-child),
 h3:not(:first-child),
